--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,23 @@
 {
 	"name": "XPather",
 	"description": "XPaths done the right way.",
-	"version": "0.2",
+	"version": "0.3",
 
 	"browser_action": {
 		"default_title": "XPather",
-		"default_icon": "icon.png",
-		"default_popup": "popup.html"
+		"default_icon": "icon.png"
+	},
+
+	"background": {
+		"scripts": ["background.js"]
+	},
+
+	"commands": {
+		"_execute_browser_action": {
+			"suggested_key": {
+				"default": "Alt+X"
+			}
+		}
 	},
 
 	"content_scripts": [
@@ -19,7 +30,7 @@
 	],
 
 	"permissions": [
-		"tabs", "<all_urls>"
+		"background", "tabs", "<all_urls>"
 	],
 
 	"minimum_chrome_version": "22",
