--- a/manifest.json
+++ b/manifest.json
@@ -44,7 +44,7 @@
 	},
 
 	"web_accessible_resources": [
-		"img/search.png"
+		"img/search.png", "img/sidebar-toggler.png"
 	],
 
 	"offline_enabled": true,
