--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "XPather",
 	"description": "XPaths done the right way.",
-	"version": "0.4.0",
+	"version": "0.4.1",
 
 	"browser_action": {
 		"default_title": "XPather",
@@ -26,7 +26,7 @@
 
 	"content_scripts": [
 		{
-			"css": ["xpather.css"],
+			"css": ["css/xpather.css"],
 			"js": ["lib/jquery.js", "lib/jquery.xpath.js", "xpather.js"],
 			"matches": ["<all_urls>"],
 			"run_at": "document_end"
@@ -34,7 +34,7 @@
 	],
 
 	"permissions": [
-		"background", "tabs", "<all_urls>"
+		"background", "storage", "tabs", "<all_urls>"
 	],
 
 	"icons": {
