--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"version": "0.6.6",
 
 	"browser_action": {
-		"default_title": "XPather",
+		"default_title": "Toggle XPather",
 		"default_icon": {
 			"19": "img/icon19.png",
 			"38": "img/icon38.png"
