--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,8 @@
 {
 	"name": "XPather",
 	"description": "XPaths done the right way.",
+	"author": "Bartek 'Simek' Kaszubowski",
+	"homepage_url": "https://github.com/Simek/XPather",
 	"version": "0.6.8",
 
 	"browser_action": {
