--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,7 @@
 	"content_scripts": [
 		{
 			"css": ["css/xpather.css"],
-			"js": ["lib/jquery.js", "lib/jquery.xpath.js", "lib/jquery.caret.js", "lib/functions.js", "xpather.constants.js", "xpather.js"],
+			"js": ["lib/jquery-2.1.1.min.js", "lib/jquery.xpath-0.2.5.min.js", "lib/jquery.caret.js", "lib/functions.js", "xpather.constants.js", "xpather.js"],
 			"matches": ["<all_urls>"]
 		}
 	],
