--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,15 @@
 	"content_scripts": [
 		{
 			"css": ["css/xpather.css"],
-			"js": ["lib/jquery-2.1.1.min.js", "lib/jquery.xpath-0.2.5.min.js", "lib/jquery.caret.js", "lib/functions.js", "xpather.constants.js", "xpather.js"],
+			"js": [
+				"lib/jquery-2.1.3.min.js",
+				"lib/jquery.xpath-0.2.5.min.js",
+				"lib/jquery.scrollTo-1.4.14.min.js",
+				"lib/jquery.caret.js",
+				"lib/functions.js",
+				"xpather.constants.js",
+				"xpather.js"
+			],
 			"matches": ["<all_urls>"]
 		}
 	],
